# Pong

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android/app/: build.gradle
android/app/jni/: CMakeLists.txt  SDL3
android/app/src/main/: AndroidManifest.xml  AndroidManifest.xml-e
android/org.cyao.pong/app/: build.gradle
android/org.cyao.pong/app/jni/: Application.mk  CMakeLists.txt  SDL2
android/org.cyao.pong/app/jni/include/: SDL2
android/org.cyao.pong/app/src/main/: AndroidManifest.xml
android/org.cyao.pong/app/src/main/java/org/cyao/pong/: PongActivity.java
include/: game.hpp  menu.h
src/: game.cpp  main.cpp  menu.cpp
